--- a/index.html
+++ b/index.html
@@ -34,22 +34,22 @@
                 <h2 id="works">Works</h2>
             </div>
             <div class="service_box">
-                <div class="service_data">
+                <div class="service_data slide_in">
                     <a href="#">
                         <div class="img_box">
                             <img src="https://placehold.jp/1280x720.png"/>
                         </div>
                     </a>
                     <div class="service_content">
-                        <h3>&nbsp;GmailNotify</h3>
+                        <h3>&nbsp;Shaneron.page</h3>
                     </div>
                     <div class="link_box">
                         <a class="link_button under_line" href="#">Site</a>
-                        <a class="link_button under_line" href="#">GitHub</a>
+                        <a class="link_button under_line" href="https://github.com/Unigmos/HomePage">GitHub</a>
                     </div>
                 </div>
 
-                <div class="service_data">
+                <div class="service_data slide_in">
                     <a href="#">
                         <div class="img_box">
                             <img src="https://placehold.jp/1280x720.png"/>
@@ -63,7 +63,7 @@
                     </div>
                 </div>
 
-                <div class="service_data">
+                <div class="service_data slide_in">
                     <a href="#">
                         <div class="img_box">
                             <img src="https://placehold.jp/1280x720.png"/>
@@ -82,12 +82,18 @@
         <div class="contact_container">
             <div class="contact_message">
                 <h2 id="contact">Contact</h2>
-                <p>ここに入力するここに入力するここに入力するここに入力するここに入力するここに入力するここに入力する</p>
+                <ul>
+                    <li><a href="https://twitter.com/intent/follow?screen_name=Shaneron_kijo"><b>Twitter:</b>@shaneron_kijo</a></li>
+                    <li><a href="mailto:shaneron@sumahotektek.com"><b>Gmail:</b>shaneron@sumahotektek.com</a></li>
+                    <li><a href="https://github.com/Unigmos"><b>GitHub:</b>https://github.com/Unigmos</li>
+                </ul>
             </div>
         </div>
     </main>
     <footer>
 
     </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="js/slide_in.js"></script>
 </body>
 </html>
