--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="author" content="Shaneron">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shaneron.page</title>
     <link rel="stylesheet" href="../css/style.css">
@@ -24,10 +24,28 @@
         </div>
     </header>
     <main>
+        <div class="top_container" id="top">
+            <div class="top_title">
+                <h2>Welcome to Shaneron's portfolio</h2>
+            </div>
+            <div class="top_image">
+                <img src="https://pbs.twimg.com/profile_images/1363728876107522053/bORtDFkE_400x400.jpg">
+            </div>
+            <div class="top_message">
+                <p>
+                    こちらはShaneronのポートフォリオになります。<br>
+                    作成したサイトやサービスを掲載しています。
+                </p>
+            </div>
+        </div>
         <div class="about_container">
             <div class="about_message">
                 <h2 id="about">About</h2>
-                <p>ここに入力するここに入力するここに入力するここに入力するここに入力するここに入力するここに入力する</p>
+                <p>
+                    &emsp;しゃねろんと言います。普段はお酒片手にYoutubeを見るような大学生ですが、やるときはやるかもしれない男です。<br>
+                    &emsp;言語は主にPythonとHTMLを使用していて、最近はスマホアプリ開発関連でKotlinにも手を出し始めました。<br>
+                    &emsp;良いお酒とライブラリを模索していますー。気軽に接して頂けると嬉しいです、よろしくお願いしますー。
+                </p>
             </div>
         </div>
 
@@ -95,7 +113,5 @@
     <footer>
 
     </footer>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="js/slide_in.js"></script>
 </body>
 </html>
