--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </article>
             </div>
 
-            <div class="top_title">
+            <div class="new_title">
                 <h2>最新記事</h2>
             </div>
 
