--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shaneron.page</title>
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Archivo+Narrow:wght@500&family=Montserrat:wght@300&display=swap" rel="stylesheet">
 </head>
 
 
@@ -105,7 +108,7 @@
                 <ul>
                     <li><a href="https://twitter.com/intent/follow?screen_name=Shaneron_kijo"><b>Twitter:</b>@shaneron_kijo</a></li>
                     <li><a href="mailto:shaneron@sumahotektek.com"><b>Gmail:</b>shaneron@sumahotektek.com</a></li>
-                    <li><a href="https://github.com/Unigmos"><b>GitHub:</b>https://github.com/Unigmos</li>
+                    <li><a href="https://github.com/Unigmos"><b>GitHub:</b>https://github.com/Unigmos</a></li>
                 </ul>
             </div>
         </div>
